# photo-metadata-tool

./: .env.linux_run_with_linux_user_paths  .env.linux_run_with_nt_user_paths  .env.nt_run_with_nt_user_paths  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  ruff.toml
app/: app.py
scripts/: get_version.py  run_seqpix.bat  stop_seqpix.bat
src/seqpix/: __init__.py  api.py
